Added "about" page

--- a/assets/about.html
+++ b/assets/about.html
@@ -41,24 +41,19 @@
 <div id="header" align="center">
     <img src="logo.png" alt="Logo" width="100px" height="100px"/>
 
-    <p>AntennaPod, Version 0.9.8.0</p>
+    <p>Einschlafen Podcast, Version 1.0.0</p>
 
-    <p>Copyright © 2012 Daniel Oeh</p>
+    <p><a href="http://einschlafen-podcast.de/">einschlafen-podcast.de/</a></p>
 
     <p>Licensed under the MIT License <a href="LICENSE.html">(View)</a></p>
 </div>
 <h1>Used libraries</h1>
 
-<h2>NineOldAndroids <a href="http://nineoldandroids.com">(Link)</a></h2>
-by Jake Wharton, licensed under the Apache 2.0 license
-
+<h2>AndroidSlidingUpPanel <a href="https://github.com/umano/AndroidSlidingUpPanel">(Link)</a></h2>
+Licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
 <h2>Apache Commons <a href="http://commons.apache.org/">(Link)</a></h2>
-by The Apache Software Foundation, licensed under the Apache 2.0 license
-<h2>flattr4j <a href="http://www.shredzone.org/projects/flattr4j/wiki">(Link)</a></h2>
-licensed under the Apache 2.0 license
-<h2>drag-sort-listview <a href="https://github.com/bauerca/drag-sort-listview">(Link)</a></h2>
-licensed under the Apache 2.0 license
+by The Apache Software Foundation, licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
 <h2>Presto Client <a href="http://www.aocate.com/presto/">(Link)</a></h2>
-licensed under the Apache 2.0 license
+licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
 </body>
 </html>
