stream the file currently downloading from a local NanoHTTPD

--- a/assets/about.html
+++ b/assets/about.html
@@ -52,8 +52,10 @@
 <h2>AndroidSlidingUpPanel <a href="https://github.com/umano/AndroidSlidingUpPanel">(Link)</a></h2>
 Licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
 <h2>Apache Commons <a href="http://commons.apache.org/">(Link)</a></h2>
-by The Apache Software Foundation, licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
+<a href="LICENSE_APACHE.txt">by The Apache Software Foundation, licensed under the Apache 2.0 license</a>
 <h2>Presto Client <a href="http://www.aocate.com/presto/">(Link)</a></h2>
-licensed under the Apache 2.0 license <a href="LICENSE_APACHE.txt">(View)</a>
+<a href="LICENSE_APACHE.txt">licensed under the Apache 2.0 license</a>
+<h2>NanoHTTPD <a href="https://github.com/NanoHttpd/nanohttpd">(Link)</a></h2>
+<a href="LICENSE_NANOHTTPD.txt">licensed with a modified BSD license.</a>
 </body>
 </html>
